--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <img id="dessert-img" src="" alt="Dessert Image">
     </div>
 
-    <!-- Lower Third -->
     <div id="lower-third">
 
       <div class="player-block">
@@ -31,10 +30,9 @@
 
     </div>
 
-    <!-- Buttons -->
     <div id="controls">
       <button id="toggle-btn">
-        <img src="/seawolves-the-floor/White Wolfhead No TM.png" alt="Button">
+        <img src="/seawolves-the-floor/white_wolfhead.png" alt="Button">
       </button>
 
       <button id="reset-btn">↻</button>
