--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <div class="player-block">
       <input id="player1-name" class="player-name" value="Player 1">
-      <div id="timer1" class="timer-box"><span class="timer">20.0</span></div>
+      <div class="timer-box"><span id="timer1" class="timer">20.0</span></div>
     </div>
 
     <div id="answer-area"></div>
 
     <div class="player-block">
       <input id="player2-name" class="player-name" value="Player 2">
-      <div id="timer2" class="timer-box"><span class="timer">20.0</span></div>
+      <div class="timer-box"><span id="timer2" class="timer">20.0</span></div>
     </div>
 
   </div>
