--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
   <!-- Image Area -->
   <div id="image-area">
+    <div id="image-placeholder"></div>
     <img id="dessert-img" src="" alt="Dessert Image">
   </div>
 
   <!-- Lower Third -->
   <div id="lower-third">
-
     <div class="player-block">
       <input id="player1-name" class="player-name" value="Player 1">
       <div class="timer-box"><span id="timer1" class="timer">20.0</span></div>
@@ -29,7 +29,6 @@
       <input id="player2-name" class="player-name" value="Player 2">
       <div class="timer-box"><span id="timer2" class="timer">20.0</span></div>
     </div>
-
   </div>
 
   <!-- Controls -->
