--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SBU – The Floor Game</title>
+  <title>SBU – The Floor Game (Master)</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -41,6 +41,6 @@
 
 </div>
 
-<script src="script.js"></script>
+<script src="script_master.js"></script>
 </body>
 </html>
