--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SBU – The Floor Game (Master)</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
 </head>
 <body>
 
