--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SBU – The Floor Game (Master)</title>
+  <title>SBU – The Floor Game</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
 </head>
@@ -42,6 +42,6 @@
 
 </div>
 
-<script src="script_master.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
