--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SBU — The Floor (Master/Slave)</title>
 
-  <!-- styling -->
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Ably realtime client (CDN) -->
-  <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
+  <script src="https://cdn.ably.io/lib/ably.min.js"></script>
 </head>
 <body>
   <div id="game-container">
@@ -25,6 +22,7 @@
       <div class="player-block">
         <input id="player1-name" class="player-name" value="Player 1" />
         <div class="timer-box"><span id="timer1" class="timer">20.0</span></div>
+        <button id="pass1" class="pass-btn">Pass (1)</button>
       </div>
 
       <div id="answer-area" aria-live="polite"></div>
@@ -32,17 +30,17 @@
       <div class="player-block">
         <input id="player2-name" class="player-name" value="Player 2" />
         <div class="timer-box"><span id="timer2" class="timer">20.0</span></div>
+        <button id="pass2" class="pass-btn">Pass (1)</button>
       </div>
     </div>
 
     <!-- CONTROLS -->
     <div id="controls">
       <button id="toggle-btn" aria-label="Start / Toggle">
-        <img src="/seawolves-the-floor/white_wolfhead.png" alt="Seawolves button">
+        <img src="/seawolves-the-floor/white_wolfhead.png" alt="Seawolves button" id="wolfhead-img">
       </button>
 
       <button id="reset-btn" aria-label="Reset (double-press quickly)">
-        <!-- circular arrow -->
         ↻
       </button>
     </div>
