--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SBU — The Floor (Master/Slave)</title>
+  <title>SBU — The Floor</title>
 
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.ably.io/lib/ably.min.js"></script>
